chamber/styles/base.css
/* ... */
main.discover h1 {
    color: #ffffff;
    background-color: #333333;
    text-align: center;
}

div.last-visit-container {
    margin: 10% 10%;
    box-shadow: none;
    text-align: center;
}

div.demographics-container {
    margin: 5%;
}

.demographics-container h3 {
    font-weight: 700;
    margin: 5.5% auto auto auto;
}

.demographics-container hr {
    width: 80%;
}

.demographics-p {
    margin: 4.8% 5%;
}

div.gallery-container {
    margin: 5%;
}

main.discover .gallery-card {
    margin: 1rem 5% 2rem 5%;
    border: 1px solid #333333;
    box-shadow: 0 .25rem .5rem 0 rgba(0,0,0,0.2);
    /* box-shadow: 0 .25rem .5rem .25rem rgba(0,0,0,0.2); */
    /* box-shadow: 0 .25rem .5rem .25rem rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); */
}

.gallery-card img {
    object-fit: contain;
    max-width: 100%;
}

.gallery-p {
    margin: 0;
    padding: 1rem 5%;
}

/* ====================== JOIN PAGE ======================*/
/* ====================== JOIN PAGE ======================*/
/* ====================== JOIN PAGE ======================*/
main.join h1 {
    color: #ffffff;
    background-color: #333333;
    text-align: center;
}

main.join h2 {
    margin: 2.25rem auto 0 auto;
    text-align: center;
}

main.join form.join-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 6rem;
}

form.join-form fieldset {
    margin: 2rem 0;
    border: 2px solid #333333;
    padding: .5rem 2% 1.5rem;
    font-family: 'Cabin', sans-serif;
    font-weight: normal;
    width: 90%;
}

form.join-form fieldset div {
    display: flex;
    flex-direction: column;
    align-items: center;
    box-shadow: none;
    border: none;
    width: 100%;
}

/* form.join-form fieldset:nth-of-type(1) {
    margin: .75rem 0 2rem 0;
} */

form.join-form legend {
    font-size: 1.25rem;
    color: white;
    margin: 0 1rem;
    padding: 0 .5rem;
}

form.join-form label.top {
    display: block;
    margin: 0 5%;
    padding-top: 1rem;
    color: white;
    font-size: .8rem;
    width: 70%;
    max-width: 20rem;
}

form.join-form label.top input, form.join-form label.top textarea {
    display: block;
    font-size: 1rem;
    border: solid 1px #333333;
    margin: 0 .5%;
    padding: .75rem;
    color: black;
    width: 90%;
    max-width: 20rem;
    /* background-color: #333333; */
}

form.join-form label.sbs {
    display: block;
    padding: .75rem 0;
    color: white;
}

form.join-form input.submitBtn {
    border: none;
    background-color: #FCBA03;
    padding: .75rem 1.5rem;
    /* margin: 0 0 4rem 2%; */
    width: 96%;
    max-width: 20rem;
    font-family: 'Cabin', sans-serif;
    font-weight: normal;
}

form.join-form label.top input:required {
    border-left: red solid 6px;
}

form.join-form label.top input:required:valid {
    border-left: green solid 6px;
}

form.join-form fieldset:nth-of-type(3) h3 {
    /* color: white; */
    text-decoration: underline;
}

/* ++++++ Third Fieldset ++++++ */
main.join form.join-form fieldset:nth-of-type(3) div.join-membership-medium-view {
    display: none;
}

main.join form.join-form fieldset:nth-of-type(3) div.join-membership-small-view {
    display: flex;
    flex-direction: column;
    /* align-items: flex-start; */
    box-shadow: none;
    border: none;
}

main.join div h3 {
    margin: 0;
    padding: .5rem 0;
    align-self: center;
}

main.join form.join-form fieldset:nth-of-type(3) label {
    margin: 0;
    padding: 0 5% .75rem 5%;
}

main.join form.join-form fieldset:nth-of-type(3) .member-benefits-p {
    margin: 0;
    padding: .75rem 5% 0 5%;
    font-style: italic;
}



/* ====================== THANK YOU PAGE ======================*/
/* ====================== THANK YOU PAGE ======================*/
/* ====================== THANK YOU PAGE ======================*/
main.thankyou h1 {
    color: #ffffff;
    background-color: #333333;
    text-align: center;
}

main.thankyou h2 {
    margin: 2.25rem auto 0 auto;
    text-align: center;
}

main.thankyou h3 {
    margin: 1rem 5%;
}

main.thankyou p {
    margin: 1rem 5% 12rem 5%;
}

/* ====================== DIRECTORY YOU PAGE ======================*/
/* ====================== DIRECTORY YOU PAGE ======================*/
/* ====================== DIRECTORY YOU PAGE ======================*/
main.directory h1 {
    color: #ffffff;
    background-color: #333333;
    text-align: center;
}

main.directory * {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

main.directory {
	margin: 0 auto;
	/* border: 1px solid #bbb; */
	padding: 0.5rem;
	/* max-width: 700px; */
	/* background-color: #eee; */
}

main.directory hr {
    margin-bottom: 1.5rem;
}

/* ======= MENU, DIRECTORY  ======= */
div.directory-menu {
	margin: 1rem auto;
	/* border: 1px solid rgba(0, 0, 0, 0.1); */
	padding: 0.5rem;
	/* background-color: #bbb; */
	text-align: center;
}

.directory-menu button {
	margin: auto 1rem;
    padding: 1rem;
}
/* end MENU, DIRECTORY //////////// */

main.directory article,
main.directory section {
	margin: 0.75rem;
}

main.directory section {
    /* border: 1px solid rgba(0, 0, 0, 0.1);
    box-shadow: 0 .5rem 1rem 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    padding: 0.5rem; */
    /* background-color: #ccc; */
}

main.directory section a {
    font-size: 0.9rem;
    font-family: 'Cabin', sans-serif;
    font-weight: normal;
    color: #FDEBB4;
}

main.directory img {
    height: 75px;
    max-width: 100%;
}

/* ======= GRID, DIRECTORY  ======= */
main.directory .grid {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
	align-items: center;
    row-gap: 1rem;
}
/* ... */

